objects/Onboarding__c.object
<CustomObject>
    <description>This object is used for tracking the successful on-boarding of a new account.</description>
    <fields>
        <fullName>ACV_Contacts__c</fullName>
        <description>Fleet/Lease field</description>
        <label>ACV Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACV Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVP_RSD_TM_CSM__c</fullName>
        <description>New field added for Fleet/Lease On-boarding Records</description>
        <label>AVP/RSD/TM/CSM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AVP</fullName>
                </value>
                <value>
                    <fullName>RSD</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>All CSMs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fleet/Lease field</description>
        <label>Account Setup Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Title_Notes__c</fullName>
        <label>Additional Title Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Transportation_Notes__c</fullName>
        <label>Additional Transportation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Information__c</fullName>
        <description>Fleet/Lease field. All applicable address information.</description>
        <label>Address Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Time_Purchases__c</fullName>
        <description>We are not using this field anymore.</description>
        <formula>All_time_purchases_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XAll Time Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Time_Sold__c</fullName>
        <description>We are not using this field anymore.</description>
        <formula>All_time_sold_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XAll Time Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_time_purchases_number__c</fullName>
        <label>All time purchases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_time_sold_Number__c</fullName>
        <label>All time sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_to_Sell_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for approval to sell on Fleet/lease records.</description>
        <label>Approved to Sell Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arbitration_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated if an arbitration case was involved during the onboarding process</description>
        <inlineHelpText>This field is populated if an arbitration case was involved during the onboarding process</inlineHelpText>
        <label>Arbitration Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arbitration_Outcome__c</fullName>
        <label>Arbitration Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arb Approved</fullName>
                </value>
                <value>
                    <fullName>Arb Denied</fullName>
                </value>
                <value>
                    <fullName>IST Handled</fullName>
                </value>
                <value>
                    <fullName>Customer Handled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arbitration_Window_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arbitration Window &amp; Policy Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Preference__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Assignment Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSV</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>ACV Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auction_Create_Date_Time__c</fullName>
        <formula>Auction_ID__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Create Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auction_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auction Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auction_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FTB Auction ID</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Onboarding</relationshipLabel>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auction_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Auction_ID__r.Id , Auction_ID__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auction Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Services_Offered__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Auction Services Offered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the original Business Development Representative</description>
        <label>BDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDR_owner__c</fullName>
        <label>BDR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Light_Auction__c</fullName>
        <formula>Auction_ID__r.blue_light__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blue Light Auction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bought_in_30_Days__c</fullName>
        <label># Bought in 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <description>Cell phone field for the Fleet/Lease on-boarding records.</description>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <description>Fleet/Lease field. All applicable contact info</description>
        <label>Contact Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field for if a contract on a fleet/lease record is signed.</description>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>Fleet/Lease field</description>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Date Onboarding Record was moved to completed</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Customer_Received_Title__c</fullName>
        <label>Date Customer Received Title</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Joined_Date__c</fullName>
        <label>Date Joined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Joined__c</fullName>
        <description>We are not using this field anymore.</description>
        <formula>Date_Joined_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDate Joined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Arbitration_Window_Reminder__c</fullName>
        <label>Date/Time Arbitration Window Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Delivered__c</fullName>
        <description>Populated via workflow rule upon setting the delivered field</description>
        <label>Date/Time Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Payment_Cleared__c</fullName>
        <description>Populated via workflow rule upon setting the payment cleared field</description>
        <label>Date/Time Payment Cleared</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Recommendation__c</fullName>
        <label>Date/Time Recommendation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Slips_Sent__c</fullName>
        <description>Populated via workflow rule upon setting the Slips Sent field</description>
        <label>Date/Time Slips Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Title_Received_ACV__c</fullName>
        <description>Populated via workflow rule upon setting the title field</description>
        <label>Date/Time Title Received at ACV</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Title_Sent_to_Customer__c</fullName>
        <label>Date/Time Title Sent to Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Transportation__c</fullName>
        <description>Populated via workflow rule upon setting the Transportation field</description>
        <label>Date/Time Transportation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Vehicle_as_Expected__c</fullName>
        <description>Populated via workflow rule upon setting the Vehicle as Expected field</description>
        <label>Date/Time Vehicle as Expected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_FTB__c</fullName>
        <description>Date of First Time Buy</description>
        <label>Date of FTB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Kick_Off_Meeting__c</fullName>
        <label>Date of Kick Off Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_hand_off__c</fullName>
        <label>Date of Hand Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealership_ID_Text__c</fullName>
        <label>Dealership ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <description>We are not using this field anymore.</description>
        <formula>Dealership_ID_Text__c</formula>
        <label>XDealership ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fleet/Lease field</description>
        <label>Demo Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Pass_Opt_in_Text__c</fullName>
        <label>Fast Pass Opt-in</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fast_Pass_Opt_in__c</fullName>
        <formula>Fast_Pass_Opt_in_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fast Pass Opt-in</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Fee Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floorplan__c</fullName>
        <label>Floorplan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NextGear</fullName>
                </value>
                <value>
                    <fullName>AFC</fullName>
                </value>
                <value>
                    <fullName>Auto Use</fullName>
                </value>
                <value>
                    <fullName>M&amp;T</fullName>
                </value>
                <value>
                    <fullName>KeyBank</fullName>
                </value>
                <value>
                    <fullName>Millennium</fullName>
                </value>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>TD Bank</fullName>
                </value>
                <value>
                    <fullName>Westlake</fullName>
                </value>
                <value>
                    <fullName>Huntington National Bank</fullName>
                </value>
                <value>
                    <fullName>BMO Harris</fullName>
                </value>
                <value>
                    <fullName>VAC</fullName>
                </value>
                <value>
                    <fullName>ADI</fullName>
                </value>
                <value>
                    <fullName>Floorplan Xpress</fullName>
                </value>
                <value>
                    <fullName>Carbucks</fullName>
                </value>
                <value>
                    <fullName>Macatawa Bank</fullName>
                </value>
                <value>
                    <fullName>BB&amp;T</fullName>
                </value>
                <value>
                    <fullName>Dealers Finance</fullName>
                </value>
                <value>
                    <fullName>City Auto Finance</fullName>
                </value>
                <value>
                    <fullName>Greater Kalamazoo Financial Services</fullName>
                </value>
                <value>
                    <fullName>BNC Bank (floor plan)</fullName>
                </value>
                <value>
                    <fullName>First Choice Financial</fullName>
                </value>
                <value>
                    <fullName>XL Funding</fullName>
                </value>
                <value>
                    <fullName>Dealer Preferred</fullName>
                </value>
                <value>
                    <fullName>KCS Floorplan</fullName>
                </value>
                <value>
                    <fullName>AutoBank</fullName>
                </value>
                <value>
                    <fullName>Used Car Inc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handoff_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handoff To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>High_Potential_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tagging accounts that have a high potential to receive greater visibility</description>
        <inlineHelpText>Select this box if this account needs greater visibility due to have a high monthly buy or sell potential</inlineHelpText>
        <label>High Potential Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IST_Account_Manager__c</fullName>
        <description>Surfaces the IST Account manager on the onboarding object</description>
        <formula>Account_Name__r.IST_Account_Owner__r.FirstName + &quot; &quot;+ Account_Name__r.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IST_Account_Rep_Email__c</fullName>
        <label>IST Account Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inbound_ACV_Transport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound ACV Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Preference__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Launch Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>VCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Fleet/Lease field for Legal Name of Account</description>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Contact__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Lot Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onboarding_Demo_By__c</fullName>
        <label>Onboarding Demo By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>OBS</fullName>
                </value>
                <value>
                    <fullName>Customer declined: OBS sent key takeaways email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Docs_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the onboarding team acknowledges that they have received and reviewed documents before they move the account to a final home with an AM or AR.</description>
        <inlineHelpText>When checked, the onboarding team acknowledges that they have received and reviewed documents before they move the account to a final home with an AM or AR.</inlineHelpText>
        <label>Registration Docs Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Not_as_Expected__c</fullName>
        <label>Other Reason Not as Expected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Contact__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Payment Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Floorplan</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pickup_Rules__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Pickup Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Method__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Preferred Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Seller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fleet/Lease field</description>
        <label>Preferred Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Recommendations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fleet/Lease field</description>
        <label>Pricing Recommendations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Launch_Date__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Projected Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Monthly_Volume__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Projected Monthly Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Not_as_Expected__c</fullName>
        <label>Reason Not as Expected</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Vehicle_as_Expected__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Frame &amp; Unibody</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Senior AM</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>Inactivate</fullName>
                </value>
                <value>
                    <fullName>CAM</fullName>
                    <isActive>false</isActive>
                    <label>CAM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Reporting Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_List_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field for Fleet/Lease on-boarding records.</description>
        <label>Run List Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAs__c</fullName>
        <description>Fleet/Lease fields</description>
        <label>SLAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slips_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Slips Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onboarding2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TM_Notes__c</fullName>
        <description>Fleet/Lease field</description>
        <label>TM Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Text__c</fullName>
        <label>Territory Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <description>We are not using this field anymore.</description>
        <formula>Territory_Manager_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This comes from the Account object Territory Manager field which may not be regularly maintained. The Account Owner field should also hold the Territory Manager.</inlineHelpText>
        <label>XTerritory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Text__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>We are not using this field anymore.</description>
        <formula>Territory_Text__c</formula>
        <inlineHelpText>This comes from the Account object Territory field which may not be regularly maintained.</inlineHelpText>
        <label>XTerritory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Contact__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Title Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Present_to_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to set if the Title is present or not on Fleet/Lease records</description>
        <label>Title Present to Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Received_at_ACV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Received at ACV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Sent_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Type__c</fullName>
        <description>Title type field for the fleet/lease on-boarding records.</description>
        <label>Title Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repo Papers</fullName>
                </value>
                <value>
                    <fullName>MSO</fullName>
                </value>
                <value>
                    <fullName>Previous Canadian</fullName>
                </value>
                <value>
                    <fullName>Branded Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <label>Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <description>Fleet/Lease field</description>
        <label>Vehicle Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repo</fullName>
                </value>
                <value>
                    <fullName>Off Lease</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>3rd party remarketers</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Independent Auction</fullName>
                </value>
                <value>
                    <fullName>Non-Dealer</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>